--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trabajo Practico nro 1</title>
-</head>
-<body>
-    
-
+  </head>
+  <body>
     <script src="./js/ejercicio1.js"></script>
     <script src="./js/ejercicio2.js"></script>
     <script src="./js/ejercicio3.js"></script>
-    
-</body>
+    <script src="./js/ejercicio4.js"></script>
+  </body>
 </html>
